kubernetes/alephium-miner.yaml
## Set the external IP address from the `alephium-miner` to
## `alephium.network.external-address` for the alephium full node.
## For example:
## alephium.network.external-address = "34.79.193.48:9973"
apiVersion: v1
kind: Service
metadata:
  name: alephium-miner
spec:
  selector:
    app: alephium
  ports:
    - name: p2p
      protocol: TCP
      port: 9973
      targetPort: 9973
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alephium-cpu-miner
  name: alephium-cpu-miner 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alephium-cpu-miner
  template:
    metadata:
      labels:
        app: alephium-cpu-miner
      name: alephium-cpu-miner
    spec:
      containers:
      #- command: ['sleep', 'infinity']
      - command: ['/cpu-miner', 'alephium']
        image: liuhongchao/alephium-cpu-miner:v0.0.2
        imagePullPolicy: Always
        name: alephium-cpu-miner
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
