kubernetes/alephium-ingress.yaml
# This is for exposing the https://alephium.nioctib.tech website.
# Requires [cert-manager](https://cert-manager.io/docs/) to be installed
# in your k8s cluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alephium-nioctib-tech-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alephium.nioctib.tech
    secretName: alephium-nioctib-tech-it-tls
  rules:
  - host: alephium.nioctib.tech
    http:
      paths:
      - path: /docs
        backend:
          service:
            name: alephium
            port:
              number: 12973
      - path: /blocks
        backend:
          service:
            name: alephium-explorer
            port:
              number: 9090
      - path: /transactions
        backend:
          service:
            name: alephium-explorer
            port:
              number: 9090
      - path: /addresses
        backend:
          service:
            name: alephium-explorer
            port:
              number: 9090
      - path: /
        backend:
          service: alephium-explorer
          port:
            number: 3000
